# RTBot

./: .gitignore  CMakeLists.txt  README.md
cmake/: ethercat-config.cmake  toolchain.cmake
common/: CMakeLists.txt
common/include/ControlParameters/: ControlParameters.h
common/include/Parameters/: GlobalParameters.h  SharedDataType.h
common/include/Utilities/: PeriodicTask.h  SharedMemory.h  SharedMemoryManager.h  pseudoInverse.h
common/src/Parameters/: GlobalParameters.cpp
common/src/Utilities/: PeriodicTask.cpp
include/: shared_data.h
motion_control/: CMakeLists.txt
motion_control/include/: CommonTypes.h  MotorControlStrategy.hpp  Offsets.h  cia402_state.h
motion_control/include/bspline/: BSplineSmoothing.h  TargetJointsDataManager.h
motion_control/include/calibrate/: calibrateTCP.h
motion_control/include/ethercat/: EtherCATInterface.h  config_hcfa.h
motion_control/include/kinematics/: Classic6dofKine.h  DOF6Kinematic.h  KinematicsSolver.h
motion_control/include/trajectory/: TrajectoryPlanner.h
motion_control/include/velocityplanner/: velocityplanner.h
motion_control/src/: CommandHandler.cpp  CommandHandler.h  EtherCATInterface.cpp  EtherCATInterface.h  MotorControlStrategy.cpp  PIDController.cpp  PIDController.h  Robot.cpp  Robot.h  ethercat_interface.cpp  ethercat_interface.h  main.cpp
motion_control/src/bspline/: BSplineSmoothing.cpp  TargetJointsDataManager.cpp
motion_control/src/calibrate/: calibrateTCP.cpp
motion_control/src/ethercat/: EtherCATInterface.cpp
motion_control/src/kinematics/: Classic6dofKine.cpp  DOF6Kinematic.cpp  KinematicsSolver.cpp
motion_control/src/trajectory/: TrajectoryPlanner.cpp
motion_control/src/velocityplanner/: USAGE.md  velocityplanner.cpp
qt_hmi/RobotHMI/: CMakeLists.txt  RobotHMI.pro
qt_hmi/RobotHMI/src/: HmiController.cpp  HmiController.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
shared/: CMakeLists.txt
shared/include/: SharedMemoryManager.h  shared_data.h
shared/src/: SharedMemoryManager.cpp  shared_data.cpp
test/: CMakeLists.txt  test_HMI.cpp  test_PeriodicTask.cpp
test/shared_memory/: shm_test.cpp
